--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,4 @@ venv.bak/
 
 .idea/*
 root/result_directory/*
-root/test_files/gogs-master
-root/test_files/bank-vaults-master
-root/test_files/go-project-master
-root/test_files/fyne-master
+root/test_files/*
